metadata/objects/graxopportunityindex__x.object
<CustomObject>
    <fields>
        <fullName>grax_topinsightid_name__c</fullName>
        <description>grax_topinsightid_name</description>
        <externalDeveloperName>grax_topinsightid_name</externalDeveloperName>
        <label>grax_topinsightid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_user_xf__c</fullName>
        <description>grax_user_xf</description>
        <externalDeveloperName>grax_user_xf</externalDeveloperName>
        <label>grax_user_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_workcoaching_xf__c</fullName>
        <description>grax_workcoaching_xf</description>
        <externalDeveloperName>grax_workcoaching_xf</externalDeveloperName>
        <label>grax_workcoaching_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_xf__c</fullName>
        <description>grax_xf</description>
        <externalDeveloperName>grax_xf</externalDeveloperName>
        <label>grax_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxaccountindex__c</fullName>
        <externalDeveloperName>ExternalId</externalDeveloperName>
        <label>graxaccountindex</label>
        <length>255</length>
        <referenceTo>graxaccountindex__x</referenceTo>
        <relationshipLabel>graxopportunityindex</relationshipLabel>
        <relationshipName>graxopportunityindex1</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>graxid__c</fullName>
        <description>graxid</description>
        <externalDeveloperName>graxid</externalDeveloperName>
        <label>graxid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxorgid__c</fullName>
        <description>graxorgid</description>
        <externalDeveloperName>graxorgid</externalDeveloperName>
        <label>graxorgid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Opp_Products_c__c</fullName>
        <description>of_Opp_Products__c</description>
        <externalDeveloperName>of_Opp_Products__c</externalDeveloperName>
        <label>of_Opp_Products__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>graxopportunityindex</label>
    <pluralLabel>graxopportunityindex</pluralLabel>
</CustomObject>